[package]
name = "RustExperiments"
version = "0.4.0"
edition = "2021"

[dependencies]
rand = "0.9.0-alpha.2"
string-builder = "0.2.0"
num = "0.4.3"
egui = "0.29.1"
egui_extras = "0.29.1"
egui_demo_lib = "0.29.1"
eframe = "0.29.1"
log = "0.4.22"
wasm-bindgen = "0.2.95"
web-sys = "0.3.72"
fs = "0.0.5"

serde-hashkey    = "0.4.5"
serde_repr       = "0.1.19"
serde_with       = "3.8"

tracing = "0.1.40"

futures = "0.3.31"
futures-util = "0.3.31"
futures-core = "0.3.31"
futures-executor = "0.3.31"

[dependencies.tokio]
version = "1.41.1"
features  = ["io-util", "macros", "process", "rt-multi-thread", "sync", "time"]

[dependencies.tokio-timer]
version = "0.3.0-alpha.6"


[dependencies.normpath]
version = "1.3.0"
features = ["localization", "serde"]

[dependencies.serde]
version = "1.0.214"
features = ["derive",]


[dependencies.sysinfo]
version = "0.32.0"
features = ["system", "disk", "serde"]

[target.'cfg(target_os = "windows")'.dependencies]
trash   = "5.1"
windows = { features = ["Win32_Storage_FileSystem"], version = "0.58" }